Fix Parallax background bug on iOS

--- a/css/core.css
+++ b/css/core.css
@@ -4,7 +4,7 @@
              Website:	Detetive Lira
          Description:	HTML5/OOCSS3
  Layout online since:	2013
-         Last Change:	1.5.2014
+         Last Change:	3.5.2014
 ================================================
 */
 
@@ -174,8 +174,6 @@ h1 small {
 	top: 0;
 }
 .image-intro {
-	z-index: 1!important;
-	display: block;
 	width: 100%;
 	height: 100%;
 	background-image: url("../images/image-intro.jpg");
@@ -234,11 +232,6 @@ h1 small {
 	padding: 0;
 	border-radius: 0;
 }
-@media screen and (max-width:992px) {
-    .thumbnail {
-	    margin-bottom: 60px;
-    }
-}
 .thumbnail .caption {
 	padding: 0;
 	color: #6F6E6E;
@@ -249,10 +242,8 @@ h1 small {
 	background-color: #f9f9f9;
 }
 .well {
-	margin-top: 120px;
-	margin-bottom: 0px;
+	margin: 120px 0 0;
 	padding: 0;
-	width: 100%;
 	border: none;
 	-webkit-border-radius: 0px;
 	-moz-border-radius: 0px;
@@ -260,15 +251,12 @@ h1 small {
 	background-color: #191919;
 	background-attachment: fixed;
 	background-position: 50% 0;
-	background-size: cover;
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 	background-repeat: no-repeat;
 	box-shadow: none;
-}
-.well h2 {
-	margin-bottom: 30px;
-	color: #fff !important;
-	font-weight: 100 !important;
-	font-family: 'Raleway', sans-serif;
 }
 #sobre .well {
 	background-image: url("../images/info-1.jpg");
@@ -279,9 +267,16 @@ h1 small {
 #equipamentos .well {
 	background-image: url("../images/info-3.jpg");
 }
+.well h2 {
+	margin-top: 0;
+	margin-bottom: 30px;
+	color: #fff !important;
+	font-weight: 100 !important;
+	font-family: 'Raleway', sans-serif;
+}
 .img-overlay-2 {
 	position: relative;
-	padding: 100px 0;
+	padding: 150px 0;
 	width: 100%;
 	height: 100%;
 	background: url("../images/overlay4.png") repeat;
@@ -337,8 +332,8 @@ h1 small {
 }
 #contato .btn-form:hover {
 	border:1px solid rgba(255, 255, 255, 0.7);
-	background-color: #e84646;
 	border-color: #e84646;
+	background-color: #e84646;
 	color: #fff;
 }
 #contato strong {
@@ -388,6 +383,19 @@ footer p {
 }
 .seven-cols [class*=col-] {
 	margin-bottom: 30px;
+}
+@media screen and (max-width:992px) {
+    .thumbnail {
+	    margin-bottom: 60px;
+    }
+    .well {
+	    background-attachment: scroll;
+			height: auto;
+			width: 100%;
+    }
+    .img-overlay-2 {
+	    padding: 80px 0;
+    }
 }
 @media screen and (max-width:992px) {
 	.mgt-50 {
